--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -184,6 +184,17 @@ layout: default
 </style>
 {% endif %}
 
-{% if site.intensedebate_comments %}
-{% include intensedebate-comments.html %}
-{% endif %}
+<div id="gitmentContainer"></div>
+<link rel="stylesheet" href="https://imsun.github.io/gitment/style/default.css">
+<script src="https://imsun.github.io/gitment/dist/gitment.browser.js"></script>
+<script>
+    var gitment = new Gitment({
+        owner: '359581635@qq.com',
+        repo: 'https://github.com/kongweiteng/kongweiteng.github.io.git',
+        oauth: {
+            client_id: '4cf01086f381af935b32',
+            client_secret: '564692aceb8a1bbf0a8918e4b67e198aa1537c18',
+        },
+    });
+    gitment.render('gitmentContainer');
+</script>
