--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -190,7 +190,7 @@ layout: default
 <script>
     var gitment = new Gitment({
         owner: '359581635@qq.com',
-        repo: 'kongweiteng.github.io',
+        repo: 'https://github.com/kongweiteng/kongweiteng.github.io',
         oauth: {
             client_id: '4cf01086f381af935b32',
             client_secret: '564692aceb8a1bbf0a8918e4b67e198aa1537c18',
