--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -189,7 +189,7 @@ layout: default
 <script src="https://jjeejj.github.io/js/gitment.js"></script>
 <script>
     var gitment = new Gitment({
-        owner: '359581635@qq.com',
+        owner: 'kongweiteng',
         repo: 'https://github.com/kongweiteng/kongweiteng.github.io',
         oauth: {
             client_id: '4cf01086f381af935b32',
