--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -189,7 +189,7 @@ layout: default
 <script src="https://billts.site/js/gitment.js"></script>
 <script>
     var gitment = new Gitment({
-        id: '<%= page.date %>',
+        id: '<%= page.title %>',
         owner: 'kongweiteng',
         repo: 'kongweiteng.github.io',
         oauth: {
