--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -206,10 +206,11 @@ layout: default
 <!-- Link Gitalk 的支持文件  -->
 <link rel="stylesheet" href="https://unpkg.com/gitalk/dist/gitalk.css">
 <script src="https://unpkg.com/gitalk@latest/dist/gitalk.min.js"></script>
-<div id="gitalk-container" class="
+<!--<div id="gitalk-container" class="
                 col-lg-8 col-lg-offset-2
                 col-md-10 col-md-offset-1
-                post-container"></div>
+                post-container"></div>-->
+
 <script type="text/javascript">
     var gitalk = new Gitalk({
 
@@ -222,6 +223,6 @@ layout: default
         id: window.location.pathname,
 
     });
-    gitalk.render('gitalk-container');
+    gitalk.render('disqus_thread');
 </script>
 <!-- Gitalk end -->
