--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,7 +8,7 @@ layout: default
 
 <!-- Post Header -->
 {% include intro-header.html type='post' %}
-
+{% include head-baidu.html %}
 <!-- Post Content -->
 <article>
     <div class="container">
