--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -62,15 +62,15 @@ layout: default
                 <!-- disqus 评论框 end -->
                 {% endif %}
 
-                {% if site.netease_comment %}
-                <!-- 网易云跟帖 评论框 start -->
+                <!--{% if site.netease_comment %}
+                &lt;!&ndash; 网易云跟帖 评论框 start &ndash;&gt;
                 <div id="cloud-tie-wrapper" class="cloud-tie-wrapper"></div>
-                <!-- 网易云跟帖 评论框 end -->
-                {% endif %}
+                &lt;!&ndash; 网易云跟帖 评论框 end &ndash;&gt;
+                {% endif %}-->
             </div>
 
             <!-- Side Catalog Container -->
-            {% if page.catalog %}
+            <!--{% if page.catalog %}
             <div class="
                 col-lg-2 col-lg-offset-0
                 visible-lg-block
@@ -84,31 +84,31 @@ layout: default
                     <ul class="catalog-body"></ul>
                 </div>
             </div>
-            {% endif %}
+            {% endif %}-->
 
             <!-- Sidebar Container -->
-            <div class="
+            <!--<div class="
                 col-lg-8 col-lg-offset-2
                 col-md-10 col-md-offset-1
                 sidebar-container">
 
-                <!-- Featured Tags -->
+                &lt;!&ndash; Featured Tags &ndash;&gt;
                 {% include featured-tags.html bottom=true %}
 
-                <!-- Friends Blog -->
+                &lt;!&ndash; Friends Blog &ndash;&gt;
                 {% include friends.html %}
-            </div>
+            </div>-->
         </div>
     </div>
 </article>
 
 <!-- add support for mathjax by voleking-->
-{% if page.mathjax %}
+<!--{% if page.mathjax %}
 {% include mathjax_support.html %}
-{% endif %}
+{% endif %}-->
 
-{% if site.netease_comment %}
-<!-- 网易云跟帖JS代码 start -->
+<!--{% if site.netease_comment %}
+&lt;!&ndash; 网易云跟帖JS代码 start &ndash;&gt;
 <script src="https://img1.cache.netease.com/f2e/tie/yun/sdk/loader.js"></script>
 <script>
     var cloudTieConfig = {
@@ -120,12 +120,13 @@ layout: default
     var yunManualLoad = true;
     Tie.loader("aHR0cHM6Ly9hcGkuZ2VudGllLjE2My5jb20vcGMvbGl2ZXNjcmlwdC5odG1s", true);
 </script>
-<!-- 网易云跟帖JS代码 end -->
-{% endif %}
+&lt;!&ndash; 网易云跟帖JS代码 end &ndash;&gt;
+{% endif %}-->
 
 
+<!--
 {% if site.disqus_username %}
-<!-- disqus 公共JS代码 start (一个网页只需插入一次) -->
+&lt;!&ndash; disqus 公共JS代码 start (一个网页只需插入一次) &ndash;&gt;
 <script type="text/javascript">
     /* * * CONFIGURATION VARIABLES * * */
     var disqus_shortname = "{{site.disqus_username}}";
@@ -140,8 +141,9 @@ layout: default
         (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
     })();
 </script>
-<!-- disqus 公共JS代码 end -->
+&lt;!&ndash; disqus 公共JS代码 end &ndash;&gt;
 {% endif %}
+-->
 
 
 {% if site.anchorjs %}
@@ -184,36 +186,12 @@ layout: default
 </style>
 {% endif %}
 
-<!--
-<div id="gitmentContainer"></div>
-<link rel="stylesheet" href="https://billts.site/extra_css/gitment.css">
-<script src="https://billts.site/js/gitment.js"></script>
-<script>
-    var gitment = new Gitment({
-        id: '<%= page.title %>',
-        owner: 'kongweiteng',
-        repo: 'kongweiteng.github.io',
-        oauth: {
-            client_id: '4cf01086f381af935b32',
-            client_secret: '564692aceb8a1bbf0a8918e4b67e198aa1537c18',
-        },
-    });
-    gitment.render('gitmentContainer');
-</script>
--->
-
 
 <!-- Link Gitalk 的支持文件  -->
 <link rel="stylesheet" href="https://unpkg.com/gitalk/dist/gitalk.css">
 <script src="https://unpkg.com/gitalk@latest/dist/gitalk.min.js"></script>
-<!--<div id="gitalk-container" class="
-                col-lg-8 col-lg-offset-2
-                col-md-10 col-md-offset-1
-                post-container"></div>-->
-
 <script type="text/javascript">
     var gitalk = new Gitalk({
-
         // gitalk的主要参数
         clientID: '4cf01086f381af935b32',
         clientSecret: '564692aceb8a1bbf0a8918e4b67e198aa1537c18',
