替换图片云存储

--- a/_includes/short-about.html
+++ b/_includes/short-about.html
@@ -2,9 +2,9 @@
   <hr>
   <h5><a href="{{'/about/' | prepend: site.baseurl }}">ABOUT ME</a></h5>
   <div class="short-about">
-    {% if site.sidebar-avatar %}
-    <img src="{{site.sidebar-avatar}}" />
-    {% endif %}
+
+    <img src="https://kongweiteng.oss-cn-beijing.aliyuncs.com/kongweiteng.github.io/img/avatar-kwt-ny.jpg?Expires=1539767624&OSSAccessKeyId=TMP.AQF8F67Z83mPEMZyxGvMqahG6Qqrwa9SF8U176rlsBFdlKdVVEz26PolpbYpADAtAhQtWTPozbImCg8gkGR4fHDruj4-DgIVALNA5IuvBKoJDH5wCxg1LU_THoKY&Signature=KTfa3z%2BAtWUXcMKBqiCVmdYno2Q%3D" />
+
     {% if site.sidebar-about-description %}
     <p>{{site.sidebar-about-description}}</p>
     {% endif %}
