--- a/_includes/intro-header.html
+++ b/_includes/intro-header.html
@@ -7,7 +7,7 @@
 <style type="text/css">
     header.intro-header{
         position: relative;
-        background-image: url('{% if site.404-bg %}{{ site.fileBaseUrl }}{{ site.404-bg }}{% else %}{{ site.header-img }}{% endif %}');
+        background-image: url('{% if page.header-img %}{{ site.fileBaseUrl }}{{ page.header-img }}{% else %}{{ site.fileBaseUrl }}{{ site.default }}{% endif %}');
         background: {{ page.header-bg-css }};
     }
 
