bootstrap.min.css 放到文件存储

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,4 +1,4 @@
-<head>
+<link>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="google-site-verification" content="xBT4GhYoi5qRD5tr338pgPM5OWHHIDR6mNg1a3euekI"/>
@@ -45,8 +45,7 @@
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 
     <!-- Bootstrap Core CSS -->
-    <link rel="stylesheet" href="{{ "
-    /css/bootstrap.min.css" | prepend: site.baseurl }}">
+    <link rel="stylesheet" href="{{ site.fileBaseUrl }}{{ site.bootstrap-min }}">
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="{{ "
