修改 对象存储目录

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -45,7 +45,7 @@
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 
     <!-- Bootstrap Core CSS -->
-    <link rel="stylesheet" href="{{ site.fileBaseUrl }}{{ site.bootstrap-min }}">
+    <link rel="stylesheet" href="{{ site.fileBaseUrl }}/static/css/bootstrap.min.css">
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="{{ "
