--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,9 +1,9 @@
 <!-- Footer -->
-<footer>
+<!--<footer>
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-                <!-- SNS Link -->
+                &lt;!&ndash; SNS Link &ndash;&gt;
                 {% include sns-links.html center=true %}
 
                 <p class="copyright text-muted">
@@ -19,7 +19,7 @@
             </div>
         </div>
     </div>
-</footer>
+</footer>-->
 
 <!-- jQuery -->
 <script src="{{ "/js/jquery.min.js " | prepend: site.baseurl }}"></script>
