fixed  优化部署文档

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -131,7 +131,7 @@
 
 
 <!-- Side Catalog -->
-{% if page.catalog %}
+<!--{% if page.catalog %}-->
 <script type="text/javascript">
     function generateCatalog (selector) {
 
@@ -189,7 +189,7 @@
         });
     });
 </script>
-{% endif %}
+<!--{% endif %}-->
 
 
 <!-- Multi-Lingual -->
