--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -70,7 +70,7 @@ layout: default
             </div>
 
             <!-- Side Catalog Container -->
-            <!--{% if page.catalog %}
+            {% if page.catalog %}
             <div class="
                 col-lg-2 col-lg-offset-0
                 visible-lg-block
@@ -84,7 +84,7 @@ layout: default
                     <ul class="catalog-body"></ul>
                 </div>
             </div>
-            {% endif %}-->
+            {% endif %}
 
             <!-- Sidebar Container -->
             <!--<div class="
